# rs_file_system_worker

./: .travis.yml  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
examples/: copy_file.json  list_folder.json  remove_directory.json
src/: config.rs  emitter.rs  main.rs  message.rs
src/action/: copy.rs  list.rs  mod.rs  remove.rs
tests/: message_test_error.json  message_test_ok.json  message_test_remove_error.json  message_test_remove_ok.json
