[package]
name = "file_system_worker"
version = "0.2.2"
authors = [
  "Marc-Antoine ARNAUD <maarnaud@media-io.com>",
  "Valentin NOEL <valent.noel@gmail.com>"
]
edition= "2018"

[dependencies]
amqp_worker = "0.9"
futures = "^0.1"
lapin-futures = "^0.32"
log = "^0.4"
semver = "^0.9"
serde = "^1.0"
serde_json = "^1.0"
simple_logger = "1.0.1"

[build-dependencies]
built = "0.4"
