[package]
name = "file_system_worker"
version = "0.3.1"
authors = [
  "Marc-Antoine ARNAUD <maarnaud@media-io.com>",
  "Valentin NOEL <valent.noel@gmail.com>"
]
edition= "2018"

[dependencies]
mcai_worker_sdk = "0.11.8"
schemars = "0.8.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

[build-dependencies]
built = "0.5"
